add the new and old after product name

--- a/public/front/css/bundle.css
+++ b/public/front/css/bundle.css
@@ -505,7 +505,7 @@ body {
     position: relative;
     height: 52px;
     line-height: 52px;
-    background: #3f0000;
+    background: #7c4545;
     border-radius: 8px 8px 0 0;
     color: #ffffff;
     cursor: pointer;
